# contacts_rest

./: alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 8088bab935e3_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
