[tool.poetry]
name = "contacts-rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "contacts_rest"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
psycopg2 = "^2.9.6"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
